--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ // Variables
+@import "base/variables";
+
+// Partials - メインのcssファイル
+@import "partials/layout/*";
