--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+
  */
+ 
  @import "bootstrap-sprockets";
  @import "bootstrap";
- // Variables
-@import "base/variables";
+// Variables
+ @import "base/variables";
 
 // Partials - メインのcssファイル
-@import "partials/layout/*";
+ @import "partials/layout/navigation";
